--- a/src/main/webapp/chat.css
+++ b/src/main/webapp/chat.css
@@ -1,10 +1,25 @@
+body {
+    font-family: cursive;
+    color: #555555;
+    font-weight: bold;
+}
+
+button {
+    background-color: #555555;
+    border: none;
+    border-radius: 5px;
+    color: white;
+}
+
 #messages {
-    border: 1px black solid;
+    border: 2px #555555 solid;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     width: 400px;
     height: 400px;
     margin: auto;
     overflow-y: auto;
-    margin-top: 30px;
+    margin-top: 25px;
 }
 
 #sendButton {
@@ -14,11 +29,18 @@
 }
 
 #input {
-    margin-top: 30px;
-    width: 400px;
-    height: 50px;
-    border: 1px black solid;
+    margin-top: 20px;
+    margin-left: 7px;
+    width: 380px;
+    height: 53px;
+    border: 2px #555555 solid;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
     resize: none;
+    padding: 10px;
+    padding-top: 8px;
+    font-weight: bold;
+    color: #555555;
 }
 
 header {
@@ -38,26 +60,25 @@ header {
 .message {
     margin: 0px 10px;
     padding: 8px 8px 8px 18px;
-    border-radius: 5px;
+    border-top-left-radius: 7px;
+    border-bottom-right-radius: 7px;
     word-break: break-all;
 }
 
 .text {
-    font-size: 20px;
-    font-family: sans-serif;
+    font-size: 19px;
+    font-family: cursive;
+    color: #555555;
+    font-weight: bold;
 }
 
 #chat {
     text-align: center;
-    margin-top: 30px;
+    margin-top: 25px;
 }
 
 .date {
     font-size: 13px;
-}
-
-.userName {
-    font-size: 20px;
 }
 
 .wrapper {
@@ -70,12 +91,16 @@ header {
     font-size: 35px;
     width: 40%;
     vertical-align: middle;
+    border: 3px solid #555555;
+    padding: 10px;
+    height: 25px;
+    color: #555555;
 }
 
 #loginButton {
     width: 7%;
     font-size: 22px;
-    height: 46px;
+    height: 50px;
     margin-left: 10px;
     vertical-align: middle;
 }
@@ -83,4 +108,14 @@ header {
 #login {
     margin-top: 19%;
     text-align: center;
+}
+
+.hide {
+    opacity: 0;
+    transition: opacity 1s;
+}
+
+.show {
+    opacity: 1;
+    transition: opacity 2s;
 }
