users count and view

--- a/src/main/webapp/chat.css
+++ b/src/main/webapp/chat.css
@@ -142,3 +142,10 @@ header {
     opacity: 1;
     transition: opacity 2s;
 }
+
+#usersCount {
+    font-size: 17px;
+    position: fixed;
+    bottom: 10px;
+    margin-left: 20px;
+}
