--- a/src/main/webapp/chat.css
+++ b/src/main/webapp/chat.css
@@ -81,7 +81,7 @@ header {
 }
 
 .message {
-    margin: 0px 10px;
+    margin: 10px;
     padding: 8px 8px 8px 18px;
     border-top-left-radius: 7px;
     border-bottom-right-radius: 7px;
